--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-idle-timer": "^5.7.2",
     "sonner": "^2.0.5",
+    "spark-md5": "^3.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
